<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ThreePositionPopIn" Id="{05add190-6575-4785-93dd-02314cc682fd}">
    <Declaration><![CDATA[TYPE ST_ThreePositionPopIn :
STRUCT
	//Controls
	RetractPos1Cmd : BOOL;
	InsertPos2Cmd : BOOL;
	InsertPos3Cmd : BOOL;
	
	//Statuses
	RetractedPos1St : BOOL;
	InsertedPos2St : BOOL;
	InsertedPos3St : BOOL;
	
	InterlockSt :BOOL;
	
	StateSt : E_3PosMonState;
	
	DisableButtonsSt :BOOL;
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>