<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_ThreePositionPopIn" Id="{feab8367-3370-4abb-9485-1abba73e268d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ThreePositionPopIn
VAR_INPUT
	RepRate : BOOL;
	Retracted_Pos1_IN :BOOL;
	Inserted_Pos2_IN : BOOL;
	Inserted_Pos3_IN : BOOL;
END_VAR
VAR
	NegativeEdge : F_TRIG;
	MoveDelayTimer : TON;
	DelayBetweenMoves : TIME := T#2S;
END_VAR	

VAR_OUTPUT
	Insert_Pos2_OUT: BOOL;
	Insert_Pos3_OUT : BOOL;
	Interlock : BOOL;
	State : E_3PosMonState;
	DisableButtons : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Map the input states to enum
IF Inserted_Pos2_IN AND (NOT Inserted_Pos3_IN) AND (NOT Retracted_Pos1_IN)  THEN
	State:=E_3PosMonState.isInserted1;
ELSIF (NOT Inserted_Pos2_IN) AND Inserted_Pos3_IN AND (NOT Retracted_Pos1_IN)  THEN
	State:=E_3PosMonState.isInserted2;
ELSIF (NOT Inserted_Pos2_IN) AND (NOT Inserted_Pos3_IN) AND Retracted_Pos1_IN  THEN
	State:=E_3PosMonState.isRetracted;
ELSIF (NOT Inserted_Pos2_IN) AND (NOT Inserted_Pos3_IN) AND Retracted_Pos1_IN  THEN
	State:=E_3PosMonState.isRetracted;
ELSIF (NOT Inserted_Pos2_IN) AND (NOT Inserted_Pos3_IN) AND (NOT Retracted_Pos1_IN)  THEN
	State:=E_3PosMonState.isMoving;
	
ELSIF Inserted_Pos2_IN AND Inserted_Pos3_IN AND Retracted_Pos1_IN  THEN
	State:=E_3PosMonState.isBroken;
ELSIF NOT Inserted_Pos2_IN AND Inserted_Pos3_IN AND Retracted_Pos1_IN  THEN
	State:=E_3PosMonState.isBroken;
ELSIF Inserted_Pos2_IN AND NOT Inserted_Pos3_IN AND Retracted_Pos1_IN  THEN
	State:=E_3PosMonState.isBroken;
ELSIF Inserted_Pos2_IN AND Inserted_Pos3_IN AND NOT Retracted_Pos1_IN  THEN
	State:=E_3PosMonState.isBroken;
END_IF


//Shutter interlock behaviour
IF State = E_3PosMonState.isInserted1 AND (NOT RepRate) THEN 
	Interlock := TRUE;
ELSIF State = E_3PosMonState.isInserted2 AND (NOT RepRate) THEN 
	Interlock := TRUE;
ELSIF State = E_3PosMonState.isRetracted  THEN 
	Interlock := TRUE;
ELSE 
	Interlock := FALSE;	
END_IF


// Air solenoid behaviour
IF RepRate THEN
	Retract();	
	State := E_3PosMonState.isForcedOut;
END_IF


// Timeout in between moves

NegativeEdge(CLK:=State = E_3PosMonState.isMOVING);
MoveDelayTimer(PT:=DelayBetweenMoves);

IF NegativeEdge.Q THEN
	MoveDelayTimer(IN:=TRUE);
	DisableButtons := TRUE;
ELSIF MoveDelayTimer.Q THEN
	MoveDelayTimer(IN:=FALSE);
	DisableButtons:=FALSE;
END_IF



]]></ST>
    </Implementation>
    <Method Name="Control" Id="{71406ea0-4016-4515-a4f8-f0477303fc76}">
      <Declaration><![CDATA[METHOD Control : BOOL
VAR_IN_OUT
	structure: ST_ThreePositionPopIn;
END_VAR

VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF structure.InsertPos2Cmd THEN
	structure.InsertPos2Cmd := FALSE;
	InsertPosition1();	
END_IF

IF structure.InsertPos3Cmd THEN
	structure.InsertPos3Cmd := FALSE;
	InsertPosition2();	
END_IF

IF structure.RetractPos1Cmd THEN
	structure.RetractPos1Cmd := FALSE;
	Retract();	
END_IF

structure.StateSt := State;

structure.InsertedPos2St:=Inserted_Pos2_IN;
structure.InsertedPos3St:=Inserted_Pos3_IN;
structure.RetractedPos1St:=Retracted_Pos1_IN;

structure.InterlockSt:=Interlock;

structure.DisableButtonsSt:=DisableButtons;


]]></ST>
      </Implementation>
    </Method>
    <Method Name="InsertPosition1" Id="{cf31f070-5ddb-455c-914d-31c139fb5186}">
      <Declaration><![CDATA[METHOD InsertPosition1 : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF State <> E_3PosMonState.isRetracted THEN
	RETURN;
END_IF

Insert_Pos2_OUT := TRUE;	
Insert_Pos3_OUT := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="InsertPosition2" Id="{89a7f6cf-ae76-4da2-913e-033c0479901d}">
      <Declaration><![CDATA[METHOD InsertPosition2 : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF State <> E_3PosMonState.isRetracted THEN
	RETURN;
END_IF

Insert_Pos2_OUT := FALSE;
Insert_Pos3_OUT := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Retract" Id="{14a1906e-e97d-4817-873d-685037707a28}">
      <Declaration><![CDATA[METHOD Retract : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Insert_Pos2_OUT := FALSE;	
Insert_Pos3_OUT := FALSE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ThreePositionPopIn">
      <LineId Id="440" Count="56" />
      <LineId Id="123" Count="0" />
    </LineIds>
    <LineIds Name="FB_ThreePositionPopIn.Control">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="12" Count="3" />
      <LineId Id="11" Count="0" />
      <LineId Id="17" Count="3" />
      <LineId Id="16" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="23" Count="0" />
    </LineIds>
    <LineIds Name="FB_ThreePositionPopIn.InsertPosition1">
      <LineId Id="11" Count="3" />
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_ThreePositionPopIn.InsertPosition2">
      <LineId Id="15" Count="2" />
      <LineId Id="13" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_ThreePositionPopIn.Retract">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>